fix overflow

--- a/src/App.scss
+++ b/src/App.scss
@@ -55,6 +55,7 @@ html,
 #root {
   height: 100vh;
   width: 100vw;
+  overflow: hidden;
   position: relative;
 }
 
